--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       href="#" class="text-danger text-decoration-none">Sabbir Hosain</a>
   </p>
 
+<script> document.write(new Date().getFullYear()); </script>
+  
 </body>
 
 </html>
