--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <script type="text/javascript"> let year = new Date(); document.write(year.getFullYear());</script> Reserved by <a
       href="#" class="text-danger text-decoration-none">Sabbir Hosain</a>
   </p>
-
+  
+<!-- only year show-->
 <script> document.write(new Date().getFullYear()); </script>
   
 </body>
